2015-09-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.62 released.

2015-09-10  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.61 released.

2015-09-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.60 released.

2015-09-09  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Thierry Journet.

	* Version 2.1.59 released.

2015-09-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.59 released.

2015-09-09  c.hetherington  <cth@carlh.net>

	* Use SRC_LINEAR when resampling for
	audio analysis to speed things up (#685).

2015-09-09  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.58 released.

2015-09-09  Carl Hetherington  <cth@carlh.net>

	* Actually fix missing libsamplerate
	dylib for OS X.

2015-09-08  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.57 released.

2015-09-08  c.hetherington  <cth@carlh.net>

	* Missing libsamplerate dylib for OS X.

2015-09-06  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.56 released.

2015-09-06  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.55 released.

2015-09-05  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.54 released.

2015-09-05  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.53 released.

2015-09-04  Carl Hetherington  <cth@carlh.net>

	* Use libsamplerate for resampling instead
	of FFmpeg / libsoxr.

	* Fix audio mapping view changing size
	on first click.

	* Version 2.1.52 released.

2015-09-03  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.51 released.

2015-09-02  Carl Hetherington  <cth@carlh.net>

	* Switch to soxr resampler as it seems
	to have fewer artefacts in some cases (#682, possibly #493).

2015-09-02  c.hetherington  <cth@carlh.net>

	* Fix problems when changing the number
	of encoding servers / threads during an
	encode (#683).

2015-09-02  Carl Hetherington  <cth@carlh.net>

	* Version 2.1.50 released.

2015-09-01  Carl Hetherington  <cth@carlh.net>

	* Allow cancellation of transcodes during the
	checking of existing frames (#679).