@@ -54,8 +54,8 @@ public:
 	virtual int out_channels () const = 0;
 	/** @return A clone of this AudioProcessor for operation at the specified sampling rate */
 	virtual boost::shared_ptr<AudioProcessor> clone (int sampling_rate) const = 0;
-	/** Process some data, returning the processed result */
-	virtual boost::shared_ptr<AudioBuffers> run (boost::shared_ptr<const AudioBuffers>) = 0;
+	/** Process some data, returning the processed result truncated or padded to `channels' */
+	virtual boost::shared_ptr<AudioBuffers> run (boost::shared_ptr<const AudioBuffers>, int channels) = 0;
 	virtual void flush () {}
 	/** Make the supplied audio mapping into a sensible default for this processor */
 	virtual void make_audio_mapping_default (AudioMapping& mapping) const = 0;
