@@ -43,6 +43,7 @@ def build(bld):
                  audio_decoder_test.cc
                  audio_filter_test.cc
                  audio_mapping_test.cc
+                 audio_processor_test.cc
                  black_fill_test.cc
                  client_server_test.cc
                  colour_conversion_test.cc
