@@ -1,3 +1,8 @@
+2015-09-11  Carl Hetherington  <cth@carlh.net>
+
+	* Fix assertion failure when creating 6-channel DCPs
+	using the mid-side processor.
+
 2015-09-10  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.1.62 released.
